# PopLDdecay

./: INSTALL.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  Readme.txt  Sup.docx  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
.deps/: LD_Decay.Po
src/: Calculate.h  CommFun.h  DataClass.h  EHHDeal.h  FileDeal.h  FilterGenotype.h  HeadIN.h  LD_Decay.cpp  Makefile  PariWiseCal.h  ProMethod1.h  ProMethod2.h  make.sh
src/include/gzstream/: Readme
src/include/zlib/: Readme
src/tmpsrc/: FileDeal.h  LD_Decay.cpp  ProMethod1.h  ProMethod2.h  ProMethod3.h
